--- a/bodrum.html
+++ b/bodrum.html
@@ -25,8 +25,8 @@
 	<meta name="description" content="We went on a trip to Turkey in 2015.  We visited the city Istanbul, Kapadokya to the east &amp; in the south of Turkey swimming in the turqoise sea.">
 	<link rel="canonical" href="http://www.jamalpowell.com">
 	<link rel="icon" href="https://s3.amazonaws.com/turkey2015/turk.png">
-	<link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:900' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.min.css" />
 	<script src="//use.typekit.net/zzt3six.js"></script>
