--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<a href="/bodrum" class="image-wrapper cover-bod">
 					<div class="cover-image"></div>
 					<div class="caption">
-						<h2>Bodrum & Epehsus</h2>
+						<h2>Bodrum & Ephesus</h2>
 				</div>
 					
 				</a>
